--- a/pair.html
+++ b/pair.html
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background:  url("https://files.catbox.moe/aktbgo.jpg"); /* set the background image */
+      background:  url("https://files.catbox.moe/phnban.jpg"); /* set the background image */
       font-family: Arial, sans-serif;
     }
 
