--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>LEZKUSH-TMD PAIRING SITE</title>
+  <title>RAHEEM_XMD PAIRING SITE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-image:  url("https://files.catbox.moe/phnban.jpg"); /* set the background image */
+      background-image:  url("https://files.catbox.moe/jvou4h.jpg"); /* set the background image */
     }
 
     .btn {
@@ -76,12 +76,12 @@
 </head>
 <body>
 
-  <button onclick="window.open(`https://github.com/lezkush8/lezkush-bot`)" class="btn">follow on GitHub</button>
+  <button onclick="window.open(`https://github.com/Raheem-cm/RAHEEM_XMD-`)" class="btn">follow on GitHub</button>
   <button onclick="window.open(`/pair`)" class="btn">pair code</button>
-  <button onclick="window.open(`https://github.com/lezkush8/lezkush-bot`)" class="btn">github</button>
-  <button onclick="window.open(`https://wa.me/255756469954`)" class="btn">Contact Me</button>
-  <button onclick="window.open(`https://github.com/lezkush8/lezkush-bot`)" class="btn">Heroku deploy</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029VajweHxKQuJP6qnjLM31`)" class="btn">Wa Channel</button>
+  <button onclick="window.open(`https://github.com/Raheem-cm/RAHEEM_XMD-`)" class="btn">github</button>
+  <button onclick="window.open(`https://wa.me/255763111390`)" class="btn">Contact Me</button>
+  <button onclick="window.open(`https://github.com/Raheem-cm/RAHEEM_XMD-`)" class="btn">Heroku deploy</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VbAffhD2ZjChG9DX922r`)" class="btn">Wa Channel</button>
 
 
   
