--- a/pair.html
+++ b/pair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Raheem  pair site</title>
+  <title> Mr b²  pair site</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background:  url("https://files.catbox.moe/jvou4h.jpg"); /* set the background image */
+      background:  url("https://files.catbox.moe/0kz48q.jpg"); /* set the background image */
       font-family: Arial, sans-serif;
     }
 
@@ -142,9 +142,9 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text"> RAHEEM XMD SESSION SCANNER</h3>
+            <h3 class="centered-text"> MR B² MD SESSION SCANNER</h3>
             <br>
-            <h6>Coded by RAHEEM XMD .</h6>
+            <h6>Coded by MR B² MD .</h6>
             <h6>Enter Your Number with Country Code.</h6>
             <div class="input-container">
               <input placeholder="+255xxxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
